# carscanner

./: .coveragerc  .gitignore  .travis.yml  Procfile  Readme.rst  pyproject.toml  requirements.txt
src/carscanner/: __init__.py  car_offer.py  categories.py  cmd.py  context.py  criteria.py  filter.py  main.py  make_model.py  offers.py  parameter.py  parameters.py  utils.py  voivodships.py
src/carscanner/allegro/: __init__.py  allegro.py  auth.py  categories.py  offer.py  service.py
src/carscanner/allegro/dao/: car_make_model.py
src/carscanner/cli/: __init__.py  cmd.py  cmd_car_list.py  cmd_context.py  cmd_criteria.py  cmd_filter.py  cmd_offers.py  cmd_token.py  cmd_voivodeship.py
src/carscanner/dao/: __init__.py  base.py  car_make_model.py  car_offer.py  criteria.py  filter.py  meta.py  mongo_trust_store.py  vehicle_shard_dao.py  voivodship.py
src/carscanner/dao/resources/: static.json
src/carscanner/data/: __init__.py  data.py  readonly.py  resource_storage.py  vehicle_shard_loader.py
src/carscanner/service/: __init__.py  backup.py  car_offer.py  category.py  criteria.py  export.py  file_backup.py  filter.py  git_backup.py  make_model.py  migration.py  offers.py  vehicle_updater.py  voivodships.py
src/carscanner/service/migration/: v2.py  (+3 more)
src/carscanner/web/: heroku_context.py  main.py  request_factory.py
tests/: conftest.py
tests/carscanner/: test_carOffersBuilder.py  test_context.py  test_init.py  test_parameterService.py  test_utils.py
tests/carscanner/allegro/: test_allegro.py  test_carOffersBuilder.py  test_carscanner_allegro.py  test_environClientCodeStore.py  test_service.py  test_travisTokenStore.py
tests/carscanner/dao/: test_carOffer.py  test_car_offer_dao.py  test_filterDao.py  test_metadataDao.py  test_mongo_trust_store.py
tests/carscanner/data/: test_JSONStorageReadOnly.py  test_carOffersShardLoader.py  test_dataManager.py
tests/carscanner/service/: test_carDetailsModel.py  test_car_offer.py  test_file_backup.py  test_git_backup.py  test_parameterService.py
tests/carscanner/web/: test_heroku_context.py
(+9 files in other folders)
