[tool.poetry]
authors = ["Matte Silver"]
description = "Car offer scanner"
license = "MIT"
name = "carscanner"
version = "1.3.2"

[tool.poetry.dependencies]
CherryPy = "^18.1"
mattes-allegro-pl = "^0.7.0"
python = "^3.7"
PyYAML = "^5.1"
tinydb = "^3.13"
unidecode = "^1.0"
isodate = "^0.6.0"
boto3 = "^1.10.45"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
pytest = "^4.4"
pytest-cov = "^2.7"
toml = "^0.10.0"

[tool.poetry.scripts]
carscanner = 'carscanner.cmd:main'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
