[tool.poetry]
authors = ["Matte Silver"]
description = "Car offer scanner"
license = "MIT"
name = "carscanner"
version = "1.4.4"

[tool.poetry.dependencies]
CherryPy = "^18.1"
importlib_resources = "^1.0.2"
mattes-allegro-pl = '^0.8.0'
pymongo = "^3.10.1"
python = "^3.7"
PyYAML = "^5.1"
tinydb = "^3.13"
unidecode = "^1.0"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
mongomock = "^3.18.0"
pytest = "^5.3"
pytest-cov = "^2.7"
pytest-timeout = "^1.3.4"
toml = "^0.10.0"

[tool.poetry.scripts]
carscanner = 'carscanner.cmd:main'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
