[tool.poetry]
authors = ["Matte Silver"]
description = "Car offer scanner"
license = "MIT"
name = "carscanner"
version = "1.5.0"

[tool.poetry.dependencies]
attrs = "^19.3.0"
CherryPy = "^18.1"
gitpython = "^3.1.0"
importlib_resources = "^1.0.2"
mattes-allegro-pl = '^0.9.0'
pymongo = "^3.10.1"
pyramid = "^1.10.4"
pyramid_debugtoolbar = "^4.6.1"
pytel-inject = "0.4"
python = "^3.8"
PyYAML = "^5.1"
tinydb = "^3.13"
unidecode = "^1.0"
waitress = "^1.4.3"

[tool.poetry.dev-dependencies]
codecov = "^2.0"
mongomock = "^3.18.0"
pytest = "^5.3"
pytest-cov = "^2.7"
pytest-timeout = "^1.3.4"
toml = "^0.10.0"

[tool.poetry.scripts]
carscanner = 'carscanner.cli.cmd:main'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
